--- a/System/fly.fxml
+++ b/System/fly.fxml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SceneController">
    <children>
-      <TableView fx:id="table_fly" layoutX="44.0" layoutY="114.0" prefHeight="596.0" prefWidth="1093.0">
+      <TableView fx:id="table_fly" layoutX="44.0" layoutY="114.0" prefHeight="596.0" prefWidth="406.0">
         <columns>
-            <TableColumn fx:id="col_flynr" prefWidth="156.0000457763672" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Flynr" />
-            <TableColumn fx:id="col_flynavn" prefWidth="776.0000305175781" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Navn" />
-            <TableColumn fx:id="col_flypladser" prefWidth="159.99993896484375" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Pladser" />
+            <TableColumn fx:id="col_flynr" prefWidth="82.39999008178711" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Flynr" />
+            <TableColumn fx:id="col_flynavn" prefWidth="246.3999786376953" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Navn" />
+            <TableColumn fx:id="col_flypladser" prefWidth="77.5999755859375" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Pladser" />
         </columns>
       </TableView>
       <Button layoutX="27.0" layoutY="22.0" mnemonicParsing="false" onAction="#switchToMenu" prefHeight="51.0" prefWidth="157.0" style="-fx-border-color: #58b2dc; -fx-background-color: #ffffff; -fx-border-radius: 4; -fx-border-width: 1.5;" text="Tilbage" textFill="#58b2dc">
@@ -29,5 +32,17 @@
             <Font name="System Bold" size="22.0" />
          </font>
       </Button>
+      <TableView fx:id="table_destination" layoutX="524.0" layoutY="114.0" prefHeight="596.0" prefWidth="406.0">
+         <columns>
+            <TableColumn fx:id="col_destination" prefWidth="323.20001220703125" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Lufthavn" />
+            <TableColumn fx:id="col_abbreviation" prefWidth="83.199951171875" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Forkortelse" />
+         </columns>
+      </TableView>
+      <TextField fx:id="HH" layoutX="1016.0" layoutY="599.0" prefHeight="26.0" prefWidth="40.0" promptText="HH" />
+      <Text layoutX="1016.0" layoutY="542.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg dato:" />
+      <DatePicker fx:id="dateSelection" layoutX="1016.0" layoutY="547.0" />
+      <Text layoutX="1061.0" layoutY="617.0" strokeType="OUTSIDE" strokeWidth="0.0" text=":" />
+      <TextField fx:id="MM" layoutX="1069.0" layoutY="599.0" prefHeight="26.0" prefWidth="40.0" promptText="MM" />
+      <Text layoutX="1017.0" layoutY="594.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg afgang:" />
    </children>
 </AnchorPane>
