--- a/System/billetter.fxml
+++ b/System/billetter.fxml
@@ -19,5 +19,6 @@
         </columns>
       </TableView>
       <Button layoutX="534.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadBilletter" text="Load" />
+      <Button layoutX="631.0" layoutY="399.0" mnemonicParsing="false" onAction="#switchToBilletter2" text="Vælg" />
    </children>
 </AnchorPane>
