--- a/System/menu.fxml
+++ b/System/menu.fxml
@@ -58,7 +58,12 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button layoutX="608.0" layoutY="415.0" mnemonicParsing="false" onAction="#switchToTur" prefHeight="43.0" prefWidth="164.0" style="-fx-background-color: #ffffff; -fx-border-color: #0e4e6c; -fx-border-width: 2; -fx-border-radius: 4;" text="Tur/Retur" textFill="#0e4e6c">
+      <Button layoutX="608.0" layoutY="415.0" mnemonicParsing="false" onAction="#switchToTur" prefHeight="43.0" prefWidth="164.0" style="-fx-background-color: #ffffff; -fx-border-color: #0e4e6c; -fx-border-width: 2; -fx-border-radius: 4;" text="Tilkald/Send fly" textFill="#0e4e6c">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Button layoutX="609.0" layoutY="495.0" mnemonicParsing="false" onAction="#CSV" prefHeight="43.0" prefWidth="164.0" style="-fx-background-color: #ffffff; -fx-border-color: #0e4e6c; -fx-border-width: 2; -fx-border-radius: 4;" text="Eksporter CSV" textFill="#0e4e6c">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
