--- a/System/fly.fxml
+++ b/System/fly.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -38,11 +39,28 @@
             <TableColumn fx:id="col_abbreviation" prefWidth="83.199951171875" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Forkortelse" />
          </columns>
       </TableView>
-      <TextField fx:id="HH" layoutX="1016.0" layoutY="599.0" prefHeight="26.0" prefWidth="40.0" promptText="HH" />
-      <Text layoutX="1016.0" layoutY="542.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg dato:" />
-      <DatePicker fx:id="dateSelection" layoutX="1016.0" layoutY="547.0" />
-      <Text layoutX="1061.0" layoutY="617.0" strokeType="OUTSIDE" strokeWidth="0.0" text=":" />
-      <TextField fx:id="MM" layoutX="1069.0" layoutY="599.0" prefHeight="26.0" prefWidth="40.0" promptText="MM" />
-      <Text layoutX="1017.0" layoutY="594.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg afgang:" />
+      <TextField fx:id="HH" layoutX="1016.0" layoutY="323.0" prefHeight="26.0" prefWidth="40.0" promptText="HH" />
+      <Text layoutX="1016.0" layoutY="264.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg dato:" />
+      <DatePicker fx:id="dateSelection" layoutX="1016.0" layoutY="268.0" />
+      <Text layoutX="1061.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" text=":" />
+      <TextField fx:id="MM" layoutX="1069.0" layoutY="323.0" prefHeight="26.0" prefWidth="40.0" promptText="MM" />
+      <Text layoutX="1016.0" layoutY="318.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg afgang:" />
+      <TextField fx:id="HH2" disable="true" layoutX="1021.0" layoutY="587.0" prefHeight="26.0" prefWidth="40.0" promptText="HH" />
+      <Text layoutX="1021.0" layoutY="528.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg dato:" />
+      <DatePicker fx:id="dateSelection2" disable="true" layoutX="1021.0" layoutY="532.0" />
+      <Text layoutX="1066.0" layoutY="604.0" strokeType="OUTSIDE" strokeWidth="0.0" text=":" />
+      <TextField fx:id="MM2" disable="true" layoutX="1074.0" layoutY="587.0" prefHeight="26.0" prefWidth="40.0" promptText="MM" />
+      <Text layoutX="1021.0" layoutY="582.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg afgang:" />
+      <Text layoutX="1080.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tur">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Text>
+      <Text layoutX="1078.0" layoutY="494.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Retur">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Text>
+      <CheckBox layoutX="1019.0" layoutY="412.0" mnemonicParsing="false" onAction="#enableRetur" text="Tur/Retur" />
    </children>
 </AnchorPane>
