--- a/System/nybillet.fxml
+++ b/System/nybillet.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SceneController">
    <children>
-      <Text layoutX="352.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Evt CVR (undlad at skrive hvis intet CVR):" />
+      <Text layoutX="352.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Evt CVR (Skriv 0 hvis intet CVR):" />
       <Button layoutX="492.0" layoutY="340.0" mnemonicParsing="false" onAction="#switchToProdukter" prefHeight="27.0" prefWidth="90.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Udfør" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
